--- a/core/templates/categoria/categoria_list.html
+++ b/core/templates/categoria/categoria_list.html
@@ -6,33 +6,37 @@
 <h4 class="mx-3">{{ titulo }}</h4>
 {% endblock %}
 
-    {% block tlista %} Listado de Categorias {% endblock %}
+{% block tlista %} Listado de Categorias {% endblock %}
 
-    {% block thextras %}
-        <th colspan="">Opciones</th>
-    {% endblock%}
-    
-    {% block tcuerpo %}
-        {% for c in categoria %}
-            <tr>
-                <td>{{forloop.counter}}</td>
-                <td>{{c.nombre}}</td>
-                <td>{{c.sueldoBase}}</td>
-            
+{% block tExtras %} 
+    <a href="{% url 'crearCategoria' %}" class="bi bi-plus-circle-fill text-success fs-5"></a>
+{% endblock %}
 
-                <td>
-                    <!--Si queremos abrir un moda, se utiliza abrir-->
+{% block thextras %}
+    <th colspan="">Opciones</th>
+{% endblock%}
 
-                    <a href="#" class="bi bi-pencil-square" 
-                    onclick="abrir_modal('{% url "modificarCategoria" c.pk %}')"
-                    data-bs-toggle="tooltip" 
-                    data-bs-placement="top" 
-                    title="Modificar"></a>
-                    
-                </td>
+{% block tcuerpo %}
+    {% for c in categoria %}
+        <tr>
+            <td>{{forloop.counter}}</td>
+            <td>{{c.nombre}}</td>
+            <td>{{c.sueldoBase}}</td>
+        
 
-            </tr>
-            {% empty %}
-                <tr> <td> No hay categorias registradas </td> </tr>
+            <td>
+                <!--Si queremos abrir un moda, se utiliza abrir-->
+
+                <a href="#" class="bi bi-pencil-square" 
+                onclick="abrir_modal('{% url "modificarCategoria" c.pk %}')"
+                data-bs-toggle="tooltip" 
+                data-bs-placement="top" 
+                title="Modificar"></a>
+                
+            </td>
+
+        </tr>
+    {% empty %}
+        <tr> <td> No hay categorias registradas </td> </tr>
     {% endfor %}
 {% endblock %}
