WIP validaciones de fechas

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -78,7 +78,7 @@ Senda
     </div>
   </div>
 
-  {% block extra_js %}
+  {% block extrajs %}
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <script>
