--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -190,7 +190,7 @@
   <script src="{% static 'js/aside.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/modal_form_validation.js' %}"></script>
 
-  {% block extra_js %}{% endblock %}
+  {% block extrajs %}{% endblock %}
 
 </body>
 
