--- a/turnos/templates/horario/horario_list.html
+++ b/turnos/templates/horario/horario_list.html
@@ -3,49 +3,73 @@
 {% load static %}
 
 {% block title %}
-Buscar Turno
+Buscar Horario
 {% endblock %}
 
-    {% block tlista %} Listado de {% if servicio %} Turnos para servicio {% else %} Turnos {% endif %} {% endblock %}
+{% block tlista %} Listado de {% if empleado %} Turnos para empleado {% else %} Turnos {% endif %} {% endblock %}
 
-    {% block tExtras %}     
-        {% if servicio %}
-            <a href="{% url 'turnos:crearHorarioParaServicio' servicio.pk %}" class="bi bi-plus-circle-fill text-success fs-5"></a>
+{% block tExtras %}     
+    {% if empleado %}
+        <a href="{% url 'turnos:crearHorarioParaEmpleado' empleado.pk %}" class="bi bi-plus-circle-fill text-success fs-5"></a>
+    {% endif %}
+{% endblock %}
+
+{% block thextras %}
+    <th colspan="">Fecha Desde</th>
+    <th colspan="">Fecha Hasta</th>
+{% endblock %}
+
+{% block tcuerpo %}
+{% for h in horario %}
+<tr>
+    <td>{{forloop.counter}}</td>
+    <td>{{h.empleado }}</td>
+    <td>{{h.servicio}}</td>
+    <td>{{h.diaSemana}}</td>
+    <td>{{h.turno}}</td>
+    <td>{{h.asistencia}}</td>
+    <td>{{h.servicio.desde }}</td>
+    <td>{{h.servicio.hasta }}</td>
+</tr>
+{% empty %}
+    <tr> <td> No hay turnos registrados </td> </tr>
+{% endfor %}
+{% endblock %}
+
+{% block pagination %}
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; primera</a>
+            <a href="?page={{ page_obj.previous_page_number }}">anterior</a>
         {% endif %}
-    {% endblock %}
-
-
-    
-    {% block tcuerpo %}
-    {% for h in horario %}
-    <tr>
-        <td>{{forloop.counter}}</td>
-        <td>{{h.turno}}</td>
-        <td>{{h.diaSemana}}</td>
-        <td>{{h.servicio}}</td>
         
-    </tr>
-    {% empty %}
-        <tr> <td> No hay turnos registrados </td> </tr>
-    {% endfor %}
+        <span class="current">
+            Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
+        </span>
+        
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">siguiente</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">última &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 {% endblock %}
 
+{% comment %} {% block custom_actions %}
+    <div class="d-flex justify-content-end">
+        {% if servicio.estado_actual.tipo == "presupuestado" %}
+            {% if servicio.requiereSeña %}
+                <a href="#" 
+                
+                onclick="abrir_modal('{% url 'servicios:señarServicio' pk=servicio.pk %}')"  class="btn btn-success">Señar</a>
 
-    {% block custom_actions %}
-        <div class="d-flex justify-content-end">
-            {% if servicio.estado_actual.tipo == "presupuestado" %}
-                {% if servicio.requiereSeña %}
-                    <a href="#" 
-                    
-                    onclick="abrir_modal('{% url 'servicios:señarServicio' pk=servicio.pk %}')"  class="btn btn-success">Señar</a>
-
-                {% else %}
-                    <a href="{% url 'servicios:contratarServicio' pk=servicio.pk %}" class="btn btn-success">Confirmar</a>
-                {% endif %}
+            {% else %}
+                <a href="{% url 'servicios:contratarServicio' pk=servicio.pk %}" class="btn btn-success">Confirmar</a>
             {% endif %}
-        </div>  
-    {% endblock %}
-
+        {% endif %}
+    </div>  
+{% endblock %} {% endcomment %}
 
 
 {% block extrajs %}
@@ -63,6 +87,5 @@ function cerrar_modal() {
     $('#modal').modal('hide');
 }
 </script>
-
 
 {% endblock %}
