bug en formulario para editar inmuebles

--- a/core/templates/inmuebles/inmueble_form.html
+++ b/core/templates/inmuebles/inmueble_form.html
@@ -23,7 +23,7 @@ $(function() {
 	        select.prop("disabled", false);
 	        //console.log($("#id-inmuebleForm"));
 	        //$("#id-inmuebleForm").trigger("submit");
-	        $("#id-inmuebleForm").trigger("submit");
+	        //$("#id-inmuebleForm").trigger("submit");
 	    }
 
     })
