--- a/core/templates/inmuebles/inmueble_modal.html
+++ b/core/templates/inmuebles/inmueble_modal.html
@@ -8,3 +8,6 @@
 
 <!--Url del modal-->
 {% block url %} {% url 'modificarInmueble' object.pk %} {% endblock %}
+
+<!--Boton del modal-->
+{% block btnmodal %} Guardar {% endblock %} 
